syntax = "proto3";

option go_package = "github.com/stone-co/the-amazing-ledger/pkg/grpc/proto/ledger";

package ledger;

service LedgerService {
  rpc SaveTransaction (SaveTransactionRequest) returns (SaveTransactionResponse) {}
}

message SaveTransactionRequest {
  string id = 1;
  repeated Entry entries = 2;
}

message Entry  {
  string id = 1;
  string account_id = 2;
  uint64 expected_version = 3;
  Operation operation = 4;
  int32 amount = 5;
}

enum Operation {
  DEBIT = 0;
  CREDIT = 1;
};

message SaveTransactionResponse {
  string error = 1;
}
